--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<head>
+    <meta charset="utf-8">
+    <title>Project</title>
+</head>
+<body>
+    <header>
+        <h1>First Project</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="about.html">about</a></li>
+            <li><a href="schedule.html">schedule</a></li>
+            <li><a href="registre.html">registre</a></li>
+            <li><a href="contact.html">contact</a></li>
+        </ul>  
+    </nav>
+    <main>
+        <section>
+            <p>There is a envent jewelry expo 2 and there is a lot off company who want to show for the jewelry maker her las technology</p>
+            <video><a href="https://youtu.be/hj6cG6ncJ7Y?si=I3tNLU7zhTa0g6Pd"></a></video>
+        </section>
+    </main>
+    <footer>
+        <p>Made by Hatim - copyright</p>
+    </footer>
+</body>
 
