--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -18,7 +18,9 @@
     <main>
         <section>
             <p>There is a envent jewelry expo 2 and there is a lot off company who want to show for the jewelry maker her las technology</p>
-            <video><a href="https://youtu.be/hj6cG6ncJ7Y?si=I3tNLU7zhTa0g6Pd"></a></video>
+            <video>
+                <source src="https://youtu.be/hj6cG6ncJ7Y?si=I3tNLU7zhTa0g6Pd" type="video/mp4">
+            </video>   
         </section>
     </main>
     <footer>
