--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -17,7 +17,7 @@
     </nav>
     <main>
         <section>
-            <p>There is a envent jewelry expo 2 and there is a lot off company who want to show for the jewelry maker her las technology</p>
+            <p>There is a envent TechCone expo 2 and there is a lot off company who want to show her las technology</p>
             <video controls width="600">
                 <source src="https://youtu.be/hj6cG6ncJ7Y?si=I3tNLU7zhTa0g6Pd" type="video/mp4">
             </video>   
