--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>about</title>
+    <title>about us</title>
 </head>
 <body>
     <header>
-        <h1>About TechCon 2024</h1>
+        <h1>About us</h1>
+        <p>Learn more about our journey, mission, and previous speakers.</p>
         <nav>
             <lu>
                 <li href="index.html">Home</li>
@@ -13,6 +15,26 @@
         </nav>
     </header>
     <main>
+        <!-- History Section -->
+         <section id="history">
+             <h2>History</h2>
+             <p>Our organization was founded in 2005 with the goal of connecting like-minded professionals in the field of technology. Over the years, we have grown into a community that supports innovation and collaboration across various industries.</p>
+         </section>
+         <!-- Mission Section -->
+          <section id="mission">
+             <h2>Mission</h2>
+             <p>Our mission is to foster learning and growth by providing a platform for professionals to share their knowledge and experiences. We aim to inspire the next generation of leaders and innovators through events and workshops.</p>
+          </section>
+          <!-- Past Speakers Section -->
+           <section id="past-speakers">
+             <h2>Past Speakers</h2>
+             <p>We have been honored to host numerous industry leaders and experts as speakers at our events. Here are a few notable speakers:</p>
+             <ul>
+                <li>John Doe - CEO of Tech Innovators</li>
+                <li>Emily Smith - Head of Design at Creative Labs</li>
+                <li>Michael Johnson - Founder of CodeMaster</li>
+             </ul>
+           </section>
         <article>
             <p>TechCone it's a revolution of hight tech</p>
             <img alt="c:\Users\hatim\Downloads\download (1).jpeg">
