--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>about us</title>
+    <title>About TechCone 2024</title>
 </head>
 <body>
     <header>
