--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>About</title>
+    <title>About TechCon 2024</title>
 </head>
 <body>
     <header>
-        <h1>About us</h1>
+        <h1>About</h1>
         <p>Learn more about our journey, mission, and previous speakers.</p>
         <nav>
             <lu>
