--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -16,6 +16,9 @@
         </nav>
     </header>
     <main>
+        <section id="table for Detailed Schedule of Events for TechCon 2024">
+            <h2>Detailed Schedule of Events for TechCon 2024</h2>
+        </section>
        <table border="1">
         <caption>Detailed Schedule of Events for TechCon 2024</caption>
         <thead>
