--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <title>Schedule for TechCon 2024</title>
 </head>
 <body>
     <header>
@@ -30,9 +31,14 @@
         </thead>
         <tbody>
             <tr>
-                <td>2:00-3:00</td>
-                <td>3:00-4:00</td>
-                <td>4:00-5:00</td>
+                <td>2:00 - 3:00</td>
+                <td>Keynote Speech</td>
+                <td>John Doe</td>
+            </tr>
+            <tr>
+                <td>4:00 - 5:00</td>
+                <td>Cybersecurity Trends</td>
+                <td>Michael Johnson</td>
             </tr>
         </tbody>
        </table> 
