--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -17,29 +17,31 @@
         </nav>
     </header>
     <main>
-        <section><h2>Detailed Schedule of Events for TechCon 2024</h2></section>
+        <section>
+            <h2>Detailed Schedule of Events for TechCon 2024</h2>
+        </section>
         <table border="1">
-        <caption>Detailed Schedule of Events for TechCon 2024</caption>
-        <thead>
-            <tr>
-                <th scope="col">Time</th>
-                <th scope="col">Session</th>
-                <th scope="col">Speaker</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>2:00 - 3:00</td>
-                <td>Keynote Speech</td>
-                <td>John Doe</td>
-            </tr>
-            <tr>
-                <td>4:00 - 5:00</td>
-                <td>Cybersecurity Trends</td>
-                <td>Michael Johnson</td>
-            </tr>
-        </tbody>
-       </table> 
+             <caption>Detailed Schedule of Events for TechCon 2024</caption>
+             <thead>
+                 <tr>
+                     <th scope="col">Time</th>
+                     <th scope="col">Session</th>
+                     <th scope="col">Speaker</th>
+                 </tr>
+             </thead>
+             <tbody>
+                 <tr>
+                     <td>2:00 - 3:00</td>
+                     <td>Keynote Speech</td>
+                     <td>John Doe</td>
+                 </tr>
+                  <tr>
+                     <td>4:00 - 5:00</td>
+                     <td>Cybersecurity Trends</td>
+                     <td>Michael Johnson</td>
+                 </tr>
+             </tbody>
+         </table> 
     </main>
     <footer>
         <p>Made by Hatim - copyright</p>
