--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -5,6 +5,7 @@
     <title>Schedule for TechCon 2024</title>
 </head>
 <body>
+    <!-- Heder Selection -->
     <header>
         <h1>Schedule for TechCon 2024</h1>
         <nav>
@@ -16,12 +17,16 @@
             </ul>
         </nav>
     </header>
+    <!-- Main Content Section -->
     <main>
         <section>
             <h2>Detailed Schedule of Events for TechCon 2024</h2>
         </section>
+        <!-- Table for Detailed Schedule -->
         <table border="1">
+            <!-- Caption -->
              <caption>Detailed Schedule of Events for TechCon 2024</caption>
+             <!-- Table Head -->
              <thead>
                  <tr>
                      <th scope="col">Time</th>
@@ -29,6 +34,7 @@
                      <th scope="col">Speaker</th>
                  </tr>
              </thead>
+             <!-- Table Body with Data Rows -->
              <tbody>
                  <tr>
                      <td>2:00 - 3:00</td>
@@ -43,8 +49,9 @@
              </tbody>
          </table> 
     </main>
+    <!-- Footer Section -->
     <footer>
-        <p>Made by Hatim - copyright</p>
+        <p>&copy; 2024 Hatim - All rights reserved</p>
     </footer>
 </body>
 </html>
