--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -51,7 +51,7 @@
     </main>
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2024 Hatim - All rights reserved</p>
+        <p> 2024 Hatim - All rights reserved</p>
     </footer>
 </body>
 </html>
