--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -5,7 +5,7 @@
     <title>Schedule for TechCon 2024</title>
 </head>
 <body>
-    <!-- Heder Selection -->
+    <!-- Header Selection -->
     <header>
         <h1>Schedule for TechCon 2024</h1>
         <nav>
