--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -19,7 +19,6 @@
     </header>
     <!-- Main Content Section -->
     <main>
-        <section>
             <h2>Detailed Schedule of Events for TechCon 2024</h2>
             <!-- Table for Detailed Schedule -->
             <table border="1">
@@ -33,21 +32,34 @@
                          <th scope="col">Speaker</th>
                      </tr>
                  </thead>
-                 <!-- Table Body with Data Rows -->
                  <tbody>
                      <tr>
-                         <td>2:00 - 3:00</td>
-                         <td>Keynote Speech</td>
+                         <td>09:00 AM - 10:00 AM</td>
+                         <td>Opening Keynote</td>
+                         <td>Dr. Alice Smith</td>
+                     </tr>
+                     <tr>
+                         <td>10:15 AM - 11:15 AM</td>
+                         <td>Introduction To AI</td>
                          <td>John Doe</td>
                      </tr>
                      <tr>
-                         <td>4:00 - 5:00</td>
-                         <td>Cybersecurity Trends</td>
-                         <td>Michael Johnson</td>
+                        <th>11:30 AM - 12:30 PM</th>
+                        <th>Networking Lunch</th>
+                        <th>N/A</th>
+                     </tr>
+                     <tr>
+                        <td>02:15 PM - 03:15 PM</td>
+                        <th>Future of Cloud Computing</th>
+                        <th>Michael Johnson</th>
+                     </tr>
+                     <tr>
+                        <td>04:45 PM - 05:30 PM</td>
+                        <td>Closing Remarks</td>
+                        <td>Dr. Alice Smith</td>
                      </tr>
                  </tbody>
-              </table>
-        </section> 
+              </table> 
     </main>
     <!-- Footer Section -->
     <footer>
