--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Schedule for TechCon 2024</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
 </head>
 <body>
     <header>
@@ -12,51 +14,61 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="register.html">Register</a></li>
-                <li><a href="contact.html"> Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     <main>
-         <table border="1">
-             <caption>Detailed Schedule of Events for TechCon 2024</caption>
-                 <thead>
-                     <tr>
-                         <th scope="col">Time</th>
-                         <th scope="col">Session</th>
-                         <th scope="col">Speaker</th>
-                     </tr>
-                 </thead>
-                 <tbody>
-                     <tr>
-                         <td>09:00 AM - 10:00 AM</td>
-                         <td>Opening Keynote</td>
-                         <td>Dr. Alice Smith</td>
-                     </tr>
-                     <tr>
-                         <td>10:15 AM - 11:15 AM</td>
-                         <td>Introduction To AI</td>
-                         <td>John Doe</td>
-                     </tr>
-                     <tr>
-                        <th>11:30 AM - 12:30 PM</th>
-                        <th>Networking Lunch</th>
-                        <th>N/A</th>
-                     </tr>
-                     <tr>
-                        <td>02:15 PM - 03:15 PM</td>
-                        <th>Future of Cloud Computing</th>
-                        <th>Michael Johnson</th>
-                     </tr>
-                     <tr>
-                        <td>04:45 PM - 05:30 PM</td>
-                        <td>Closing Remarks</td>
-                        <td>Dr. Alice Smith</td>
-                     </tr>
-                 </tbody>
-         </table> 
+        <table>
+            <caption>Detailed Schedule of Events for TechCon 2024</caption>
+            <thead>
+                <tr>
+                    <th scope="col">Time</th>
+                    <th scope="col">Session</th>
+                    <th scope="col">Speaker</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>09:00 AM - 10:00 AM</td>
+                    <td>Opening Keynote</td>
+                    <td>Dr. Alice Smith</td>
+                </tr>
+                <tr>
+                    <td>10:15 AM - 11:15 AM</td>
+                    <td>Introduction to AI</td>
+                    <td>John Doe</td>
+                </tr>
+                <tr>
+                    <td>11:30 AM - 12:30 PM</td>
+                    <td>Advanced Web Technologies</td>
+                    <td>Jane Roe</td>
+                </tr>
+                <tr>
+                    <td>01:00 PM - 02:00 PM</td>
+                    <td>Networking Lunch</td>
+                    <td>N/A</td>
+                </tr>
+                <tr>
+                    <td>02:15 PM - 03:15 PM</td>
+                    <td>Future of Cloud Computing</td>
+                    <td>Michael Johnson</td>
+                </tr>
+                <tr>
+                    <td>03:30 PM - 04:30 PM</td>
+                    <td>Interactive Workshop</td>
+                    <td>Emily Davis</td>
+                </tr>
+                <tr>
+                    <td>04:45 PM - 05:30 PM</td>
+                    <td>Closing Remarks</td>
+                    <td>Dr. Alice Smith</td>
+                </tr>
+            </tbody>
+        </table>
     </main>
     <footer>
-        <p>Made by Hatim - copyright 2024</p>
+        <p>&copy; 2024 TechCon. All rights reserved.</p>
     </footer>
 </body>
 </html>
