--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -68,7 +68,7 @@
         </table>
     </main>
     <footer>
-        <p>&copy; 2024 TechCon. All rights reserved.</p>
+        <p>Made by Hatim - copyright 2024</p>
     </footer>
 </body>
 </html>
