--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -20,7 +20,7 @@
             <form><input type="email">Email</form>
             <form><input type="password">Password</form>
             <form><input type="checkbox">Terms and Conditions</form>
-            <form><input type="button">Submit</form>
+            <button type="submit">Register</button>
         </main>
         <footer>
             <p>Made by Hatim - copyright 2024</p>
