--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -5,16 +5,16 @@
     </head>
     <body>
         <header>
-            <H1>Contact Us</H1>
-        </header>
-        <nav>
-            <lu>
-                 <li><a href="index.html">Home</a></li>
-                 <li><a href="about.html">About</a></li>
-                 <li><a href="register.html">Register</a></li>
-                 <li><a href="contact.html">Contact</a></li>
-            </lu>
-        </nav>
+            <h1>Contact Us</h1>
+            <nav>
+                 <lu>
+                     <li><a href="index.html">Home</a></li>
+                     <li><a href="about.html">About</a></li>
+                     <li><a href="register.html">Register</a></li>
+                     <li><a href="contact.html">Contact</a></li>
+                 </lu>
+             </nav>
+        </header>    
         <main>
             <section id="contact-info">
                 <h2>Contact Information</h2>
